fix input width on mobile

--- a/inc/css/style.sass
+++ b/inc/css/style.sass
@@ -107,4 +107,4 @@ img
 			width: 40%
 
 		input
-			width: 100%
+			width: 80%
